--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "js-base64": "^2.5.1",
     "os": "^0.1.1",
     "pg": "^7.18.2",
+    "sha.js": "^2.4.11",
     "speedtest-net": "^1.6.0",
     "superagent": "^5.2.2",
     "util": "^0.12.1",
