--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "js-base64": "^2.5.1",
     "node-fetch": "^2.6.0",
     "pg": "^8.2.1",
+    "random-puppy": "^1.1.0",
     "sha.js": "^2.4.11",
     "speedtest-net": "^1.6.0",
     "toml": "^3.0.0"
