--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "js-base64": "^2.5.1",
     "node-fetch": "^2.6.0",
     "pg": "^8.2.1",
-    "random-puppy": "^1.1.0",
     "sha.js": "^2.4.11",
     "speedtest-net": "^1.6.0",
     "toml": "^3.0.0"
@@ -35,5 +34,5 @@
     "url": "https://github.com/Moitieprix/Hydrobot-dev/issues"
   },
   "homepage": "https://github.com/Moitieprix/Hydrobot-dev#readme",
-  "description": ""
+  "description": "A powerful Discord.js Bot"
 }
