--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,7 @@
         "comma-style": ["error", "last"],
         "computed-property-spacing": ["error", "never"],
         "constructor-super": "error",
-        "curly": ["error", "multi-line"],
+        "curly": "error",
         "dot-location": ["error", "property"],
         "dot-notation": ["error", { "allowKeywords": true }],
         "eol-last": "error",
